--- a/preset.html
+++ b/preset.html
@@ -316,14 +316,60 @@ document.addEventListener('DOMContentLoaded', () => {
 <button id="printPresetBtn" class="bx--btn bx--btn--primary">Stampa Preset</button>
 
 <script>
+function cloneDivWithValues(div) {
+    const clone = div.cloneNode(true);
+
+    // copia valori degli input
+    const inputs = div.querySelectorAll('input, textarea, select');
+    inputs.forEach(orig => {
+        const c = clone.querySelector(`[name="${orig.name}"]`) || clone.querySelector(`#${orig.id}`);
+        if (!c) return;
+
+        if (orig.tagName === 'INPUT') {
+            if (orig.type === 'checkbox' || orig.type === 'radio') {
+                c.checked = orig.checked;
+            } else if (orig.type === 'range') {
+                // sostituisci slider con un div visuale
+                const rangeWrapper = document.createElement('div');
+                rangeWrapper.style.position = 'relative';
+                rangeWrapper.style.width = orig.offsetWidth + 'px';
+                rangeWrapper.style.height = '8px';
+                rangeWrapper.style.background = '#ccc';
+                rangeWrapper.style.borderRadius = '4px';
+                
+                const filled = document.createElement('div');
+                const pct = (orig.value - (orig.min || 0)) / ((orig.max || 100) - (orig.min || 0));
+                filled.style.width = (pct * 100) + '%';
+                filled.style.height = '100%';
+                filled.style.background = '#1976d2';
+                filled.style.borderRadius = '4px';
+                rangeWrapper.appendChild(filled);
+                
+                c.parentNode.replaceChild(rangeWrapper, c);
+            } else {
+                c.value = orig.value;
+            }
+        } else if (orig.tagName === 'TEXTAREA') {
+            c.value = orig.value;
+        } else if (orig.tagName === 'SELECT') {
+            c.selectedIndex = orig.selectedIndex;
+        }
+    });
+
+    return clone;
+}
+
 function printDivAsPDF(divId) {
     const div = document.getElementById(divId);
     if (!div) return alert("Div non trovato");
 
-    // Cattura tutti gli stili <style> e <link rel="stylesheet">
+    // cattura stili
     const headStyles = Array.from(document.querySelectorAll('style, link[rel="stylesheet"]'))
         .map(node => node.outerHTML)
         .join('\n');
+
+    // clona il div con valori
+    const clone = cloneDivWithValues(div);
 
     const printWindow = window.open('', '', 'width=1200,height=800');
 
@@ -334,13 +380,13 @@ function printDivAsPDF(divId) {
           ${headStyles}
           <style>
             body {
-                background: #ffffff;  /* sfondo bianco */
+                background: #ffffff;
                 margin: 0;
                 padding: 0;
             }
             .print-wrapper {
-                background: #ffffff;  /* sfondo del contenuto */
-                padding: 20px;        /* margine bianco attorno */
+                background: #ffffff;
+                padding: 20px;
                 box-sizing: border-box;
             }
             @media print {
@@ -349,15 +395,15 @@ function printDivAsPDF(divId) {
                 margin: 15mm;
               }
               body {
-                -webkit-print-color-adjust: exact; /* Chrome/Safari */
-                print-color-adjust: exact; /* Firefox */
+                -webkit-print-color-adjust: exact;
+                print-color-adjust: exact;
               }
             }
           </style>
         </head>
         <body>
           <div class="print-wrapper">
-            ${div.outerHTML}
+            ${clone.outerHTML}
           </div>
         </body>
       </html>
@@ -370,10 +416,10 @@ function printDivAsPDF(divId) {
     }
 }
 
-// Attach to button
 document.getElementById('printPresetBtn').addEventListener('click', () => {
     printDivAsPDF('preset');
 });
+
 </script>
 
 
