--- a/pedalboard_test.html
+++ b/pedalboard_test.html
@@ -115,7 +115,7 @@
     <script src="utils.js"></script>
     <script src="pedalboard_test.js"></script>
     <script src="fullscreen-menu.js"></script>
-    <script src="nav-pedalboard.js"></script>
+    <script src="nav-pedalboard_test.js"></script>
   </div>
 
     <div class="zoom-controls">  
