test guest update

--- a/pedalboard.html
+++ b/pedalboard.html
@@ -113,9 +113,9 @@
     <!-- Load scripts after content is visible -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="utils.js"></script>
-    <script src="pedalboard.js"></script>
+    <script src="pedalboard_test.js"></script>
     <script src="fullscreen-menu.js"></script>
-    <script src="nav-pedalboard.js"></script>
+    <script src="nav-pedalboard_test.js"></script>
   </div>
 
     <div class="zoom-controls">  
