--- a/catalog_test.html
+++ b/catalog_test.html
@@ -80,7 +80,7 @@
       console.error('Auth check failed:', xhr.status, xhr.responseText);
       if (xhr.status === 401) {
         localStorage.removeItem('authToken');
-        window.location.href = 'login';
+        window.location.href = '';
       } else {
         alert('Failed to verify authentication. Please try again.');
       }
