--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PedalPlex – Login / Register</title>
-  <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/carbon-components.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
