--- a/catalog_old.html
+++ b/catalog_old.html
@@ -30,9 +30,9 @@
     <!-- Load scripts after content is visible -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="utils.js"></script>
-    <script src="catalog.js"></script>
+    <script src="catalog_old.js"></script>
     <script src="fullscreen-menu.js"></script>
-    <script src="nav-catalog.js"></script>
+    <script src="nav-catalog_old.js"></script>
   </div>
 
   <script>
