--- a/catalog.html
+++ b/catalog.html
@@ -38,55 +38,62 @@
   <script>
   // Check user authentication
   $(document).ready(function() {
-  if (window.location.protocol === 'file:') {
-    alert('Please run this app via a local HTTP server for full functionality.');
-    $('#loadingMessage').hide();
-    $('#page-content').hide();
-    return;
-  }
+    if (window.location.protocol === 'file:') {
+      alert('Please run this app via a local HTTP server for full functionality.');
+      $('#loadingMessage').hide();
+      $('#page-content').hide();
+      return;
+    }
 
-  const token = localStorage.getItem('authToken');
+    const token = localStorage.getItem('authToken');
 
-  if (!token) {
-    // Guest mode
-    $('#loadingMessage').hide();
-    $('#page-content').show();
-
-    window.currentUser = { role: 'guest' };
-
-    if (typeof initNavCatalog === 'function') initNavCatalog('guest');
-    if (typeof initCatalog === 'function') initCatalog('guest');
-
-    return;
-  }
-
-  // Existing auth check
-  $.ajax({
-    url: 'https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH_JWT.php',
-    method: 'GET',
-    dataType: 'json',
-    headers: { 'Authorization': 'Bearer ' + token },
-    success: function(userFromServer) {
-      $('#loadingMessage').hide(); 
+    if (!token) {
+      // Guest mode
+      $('#loadingMessage').hide();
       $('#page-content').show();
 
-      window.currentUser = userFromServer;
+      window.currentUser = { role: 'guest' };
 
-      if (typeof initNavCatalog === 'function') initNavCatalog(userFromServer.role);
-      if (typeof initCatalog === 'function') initCatalog(userFromServer.role);
-    },
-    error: function(xhr) {
-      console.error('Auth check failed:', xhr.status, xhr.responseText);
-      if (xhr.status === 401) {
-        localStorage.removeItem('authToken');
-        window.location.href = 'login';
-      } else {
-        alert('Failed to verify authentication. Please try again.');
-      }
+      if (typeof initNavCatalog === 'function') initNavCatalog('guest');
+      if (typeof initCatalog === 'function') initCatalog('guest');
+
+      return;
     }
+
+    // Existing auth check
+    $.ajax({
+      url: 'https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH_JWT.php',
+      method: 'GET',
+      dataType: 'json',
+      headers: { 'Authorization': 'Bearer ' + token },
+      success: function(userFromServer) {
+        $('#loadingMessage').hide(); 
+        $('#page-content').show();
+
+        window.currentUser = userFromServer;
+
+        if (typeof initNavCatalog === 'function') initNavCatalog(userFromServer.role);
+        if (typeof initCatalog === 'function') initCatalog(userFromServer.role);
+      },
+      error: function(xhr) {
+        console.error('Auth check failed:', xhr.status, xhr.responseText);
+        // Se il token è scaduto o non valido, entra in modalità guest
+        if (xhr.status === 401) {
+          localStorage.removeItem('authToken');
+          // Mostriamo la pagina come guest invece di reindirizzare
+          $('#loadingMessage').hide();
+          $('#page-content').show();
+          window.currentUser = { role: 'guest' };
+
+          if (typeof initNavCatalog === 'function') initNavCatalog('guest');
+          if (typeof initCatalog === 'function') initCatalog('guest');
+        } else {
+          alert('Failed to verify authentication. Please try again.');
+        }
+      }
+    });
   });
-});
-</script>
+  </script>
 
 
 </body>
