ux token expiration improved

--- a/catalog.html
+++ b/catalog.html
@@ -79,7 +79,7 @@
           // Mostriamo swal2 con opzioni
           Swal.fire({
             title: 'Session expired',
-            text: 'Your session is expired. Do you want to log-in again or continue as a Guest?',
+            text: 'Your session is expired. Do you want to Login again or continue as a Guest?',
             icon: 'warning',
             showCancelButton: true,
             showDenyButton: true,
